--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,21 @@ services:
       - mysql
     depends_on:
       - mysql
+  test:
+    build: .
+    command: mix test
+    environment:
+      - MIX_ENV=test
+      - PORT=4000
+      - DB_HOSTNAME=mysql
+      - DB_USERNAME=root
+      - DB_PASSWORD=root
+    volumes:
+      - .:/app
+    links:
+      - mysql
+    depends_on:
+      - mysql
   mysql:
     image: mysql
     restart: always
